# SnakeGame

./: CMakeLists.txt  MEREAD.md
mysrc/: colour.cpp  colour.h  controller.cpp  controller.h  food.cpp  food.h  game.cpp  game.h  main.cpp  randomizer.h  renderer.cpp  renderer.h  snake.cpp  snake.h
src/: game.cpp
